--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,1 +1,8 @@
-<h1>Header</h1>
+<header class="header">
+    <div class="logo">
+        <a href="">
+            <img src="images/kisspng-el-zen-symbol-zen-5ac0d1b2b318e8.5262934615225860347336.png" alt="">
+        </a>
+        <a class="title-logo" href="">app Notas</a>
+    </div>
+</header>
